# sm64-platform-max-tilt-brute-forcer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
platform_tilt_brute_forcer/: platform_tilt_brute_forcer.sln
platform_tilt_brute_forcer/platform_tilt_brute_forcer/: BoundaryDistance.cpp  BoundaryDistance.hpp  CMakeLists.txt  Path.cpp  Path.hpp  Platform.cpp  Platform.hpp  Surface.cpp  Surface.hpp  Trig.cpp  Trig.hpp  main.cpp  platform_tilt_brute_forcer.vcxproj  platform_tilt_brute_forcer.vcxproj.filters  vmath.cpp  vmath.hpp
